# get_next_line

./: ._get_next_line.h  CMakeLists.txt  a.out  get_next_line.c  get_next_line.h  main.c  q.txt  test.txt
